--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -169,17 +169,33 @@
             </objects>
             <point key="canvasLocation" x="919" y="1238"/>
         </scene>
-        <!--Community-->
+        <!--Community List View Controller-->
         <scene sceneID="4gx-Nw-hq8">
             <objects>
                 <viewController storyboardIdentifier="CommunityListViewController" id="a7d-7X-88d" customClass="CommunityListViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Community" id="IFL-7w-zce">
+                    <navigationItem key="navigationItem" id="IFL-7w-zce">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="gHl-GL-4FX">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="My Groups"/>
+                                <segment title="Explore"/>
+                            </segments>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="browseModeSegmentChanged:" destination="a7d-7X-88d" eventType="valueChanged" id="O5z-u2-baa"/>
+                            </connections>
+                        </segmentedControl>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="UqC-Xw-9tt">
                             <connections>
                                 <action selector="addCommunityTouched:" destination="a7d-7X-88d" id="xbB-Jo-920"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="browseModeSegmentedControl" destination="gHl-GL-4FX" id="5hf-cn-6sN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o8N-bY-vrv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
