--- a/PositionIn/CommunityList/PositionIn.CommunityListViewController.xib
+++ b/PositionIn/CommunityList/PositionIn.CommunityListViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -16,27 +16,8 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5fc-CC-Rc6">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="38"/>
-                    <subviews>
-                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V6Y-Zk-sdq">
-                            <rect key="frame" x="218" y="5" width="163" height="29"/>
-                            <segments>
-                                <segment title="My Groups"/>
-                                <segment title="Explore"/>
-                            </segments>
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </segmentedControl>
-                    </subviews>
-                    <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="centerX" secondItem="V6Y-Zk-sdq" secondAttribute="centerX" id="NqS-Mq-raW"/>
-                        <constraint firstItem="V6Y-Zk-sdq" firstAttribute="top" secondItem="5fc-CC-Rc6" secondAttribute="top" constant="5" id="Rhw-c4-bPC"/>
-                        <constraint firstAttribute="bottom" secondItem="V6Y-Zk-sdq" secondAttribute="bottom" constant="5" id="SR6-fS-rEj"/>
-                    </constraints>
-                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="9ae-G5-ANH" customClass="TableView" customModule="PosInCore">
-                    <rect key="frame" x="13" y="38" width="574" height="562"/>
+                    <rect key="frame" x="13" y="0.0" width="574" height="600"/>
                     <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                 </tableView>
             </subviews>
@@ -44,13 +25,10 @@
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="9ae-G5-ANH" secondAttribute="bottom" id="1Tw-h5-fhi"/>
                 <constraint firstItem="9ae-G5-ANH" firstAttribute="leading" secondItem="KYN-Bw-xJK" secondAttribute="leading" id="9kM-ms-Jbj"/>
-                <constraint firstAttribute="trailing" secondItem="5fc-CC-Rc6" secondAttribute="trailing" id="G8Y-38-92M"/>
-                <constraint firstItem="5fc-CC-Rc6" firstAttribute="top" secondItem="KYN-Bw-xJK" secondAttribute="top" id="MEr-ee-XeH"/>
+                <constraint firstItem="9ae-G5-ANH" firstAttribute="top" secondItem="KYN-Bw-xJK" secondAttribute="top" id="B6A-s8-0DC"/>
                 <constraint firstAttribute="trailing" secondItem="9ae-G5-ANH" secondAttribute="trailing" id="Xd7-Kf-krd"/>
                 <constraint firstAttribute="trailingMargin" secondItem="9ae-G5-ANH" secondAttribute="trailing" constant="5" id="avc-Kt-qeQ"/>
-                <constraint firstItem="9ae-G5-ANH" firstAttribute="top" secondItem="5fc-CC-Rc6" secondAttribute="bottom" id="cDy-Om-kck"/>
                 <constraint firstItem="9ae-G5-ANH" firstAttribute="leading" secondItem="KYN-Bw-xJK" secondAttribute="leadingMargin" constant="5" id="hEW-UJ-1kw"/>
-                <constraint firstItem="5fc-CC-Rc6" firstAttribute="leading" secondItem="KYN-Bw-xJK" secondAttribute="leading" id="hcg-WE-pfG"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
