--- a/PositionIn/Views/CommunityCells/PositionIn.CommunityInfoCell.xib
+++ b/PositionIn/Views/CommunityCells/PositionIn.CommunityInfoCell.xib
@@ -6,54 +6,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PositionIn.CommunityInfoCell" id="LnB-1Z-Tnm" customClass="CommunityInfoCell" customModule="PositionIn" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PositionIn.CommunityInfoCell" id="LnB-1Z-Tnm" customClass="CommunityInfoCell" customModule="PositionIn" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LnB-1Z-Tnm" id="2NY-pq-cAG">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="210" text="Golf club" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mt9-hT-T1E">
-                        <rect key="frame" x="5" y="2" width="310" height="19.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="38 Members" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQk-UL-8mz">
-                        <rect key="frame" x="5" y="26" width="310" height="13.5"/>
+                        <rect key="frame" x="2" y="5" width="316" height="13.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                         <color key="textColor" red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="200" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tat-Wc-Uju">
-                        <rect key="frame" x="5" y="45" width="310" height="64"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="200" verticalCompressionResistancePriority="749" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tat-Wc-Uju">
+                        <rect key="frame" x="2" y="24" width="316" height="100.5"/>
                         <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="400" text="78 New Updates" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1LZ-aM-Yx8">
-                        <rect key="frame" x="5" y="114" width="310" height="13.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
-                        <color key="textColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XQk-UL-8mz" firstAttribute="top" secondItem="Mt9-hT-T1E" secondAttribute="bottom" constant="5" id="3mG-oN-cdv"/>
                     <constraint firstItem="XQk-UL-8mz" firstAttribute="trailing" secondItem="tat-Wc-Uju" secondAttribute="trailing" id="4av-xu-aau"/>
-                    <constraint firstItem="1LZ-aM-Yx8" firstAttribute="trailing" secondItem="tat-Wc-Uju" secondAttribute="trailing" id="7Ld-t1-Idu"/>
-                    <constraint firstAttribute="bottom" secondItem="1LZ-aM-Yx8" secondAttribute="bottom" constant="2" id="DdW-Yl-KDU"/>
-                    <constraint firstItem="Mt9-hT-T1E" firstAttribute="top" secondItem="2NY-pq-cAG" secondAttribute="top" constant="2" id="Hjb-Ew-PE5"/>
-                    <constraint firstItem="Mt9-hT-T1E" firstAttribute="trailing" secondItem="XQk-UL-8mz" secondAttribute="trailing" id="UF6-EE-yro"/>
-                    <constraint firstItem="1LZ-aM-Yx8" firstAttribute="top" secondItem="tat-Wc-Uju" secondAttribute="bottom" constant="5" id="VxU-BV-AdB"/>
-                    <constraint firstItem="1LZ-aM-Yx8" firstAttribute="leading" secondItem="tat-Wc-Uju" secondAttribute="leading" id="dFg-pP-uuL"/>
-                    <constraint firstAttribute="trailing" secondItem="Mt9-hT-T1E" secondAttribute="trailing" constant="5" id="jis-WQ-0TM"/>
-                    <constraint firstItem="Mt9-hT-T1E" firstAttribute="leading" secondItem="XQk-UL-8mz" secondAttribute="leading" id="mQl-wG-5ph"/>
+                    <constraint firstAttribute="bottom" secondItem="tat-Wc-Uju" secondAttribute="bottom" constant="5" id="6Im-ls-Ac1"/>
+                    <constraint firstItem="XQk-UL-8mz" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" constant="2" id="H4r-cc-pdv"/>
+                    <constraint firstAttribute="trailing" secondItem="XQk-UL-8mz" secondAttribute="trailing" constant="2" id="WXy-r7-OgR"/>
+                    <constraint firstItem="XQk-UL-8mz" firstAttribute="top" secondItem="2NY-pq-cAG" secondAttribute="top" constant="5" id="ckJ-fy-aqz"/>
                     <constraint firstItem="XQk-UL-8mz" firstAttribute="leading" secondItem="tat-Wc-Uju" secondAttribute="leading" id="qNv-Se-qcw"/>
-                    <constraint firstItem="Mt9-hT-T1E" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" constant="5" id="trh-li-Uyt"/>
                     <constraint firstItem="tat-Wc-Uju" firstAttribute="top" secondItem="XQk-UL-8mz" secondAttribute="bottom" constant="5" id="yRC-wV-cX9"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="countLabel" destination="XQk-UL-8mz" id="0PA-o9-LFQ"/>
+                <outlet property="descriptionLabel" destination="tat-Wc-Uju" id="8zr-YB-hqn"/>
+            </connections>
             <point key="canvasLocation" x="315" y="332"/>
         </tableViewCell>
     </objects>
