--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -40,6 +40,7 @@
                         <segue destination="m7Z-Ea-gJH" kind="custom" identifier="ShowCommunities" customClass="KYEmbedMainControllerSegue" customModule="KYDrawerController" id="wfo-ox-TEa"/>
                         <segue destination="R25-sL-Pvy" kind="custom" identifier="ShowSettings" customClass="KYEmbedMainControllerSegue" customModule="KYDrawerController" id="uSD-ON-chU"/>
                         <segue destination="ZKO-MO-mOX" kind="custom" identifier="ShowMyProfile" customClass="KYEmbedMainControllerSegue" customModule="KYDrawerController" id="7U6-ac-Hmp"/>
+                        <segue destination="xiK-gL-Br7" kind="custom" identifier="ShowPeople" customClass="KYEmbedMainControllerSegue" customModule="KYDrawerController" id="A4b-9B-OIj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LQ4-lF-MRq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -594,8 +595,8 @@
                 <viewController storyboardIdentifier="ProductDetailsViewControllerId" id="S6u-6D-z8V" customClass="ProductDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="Mdd-tM-hBG" kind="show" identifier="ShowProductInventory" id="Dbq-97-777"/>
-                        <segue destination="8dF-Ru-GXn" kind="show" identifier="ShowSellerProfile" id="JvA-g0-pPd"/>
                         <segue destination="9PQ-zJ-hEA" kind="show" identifier="ShowBuyScreen" id="ulD-Z3-59i"/>
+                        <segue destination="2Iu-6t-chL" kind="show" identifier="ShowSellerProfile" id="ND0-h7-Vra"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kJS-3G-KqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -605,7 +606,11 @@
         <!--Event Details View Controller-->
         <scene sceneID="TQA-tq-hsQ">
             <objects>
-                <viewController storyboardIdentifier="EventDetailsViewControllerId" id="RQs-Yx-TSv" customClass="EventDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController"/>
+                <viewController storyboardIdentifier="EventDetailsViewControllerId" id="RQs-Yx-TSv" customClass="EventDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="2Iu-6t-chL" kind="show" identifier="ShowOrganizerProfile" id="OnQ-Ex-OI6"/>
+                    </connections>
+                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ru2-xA-PBE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1764" y="604"/>
@@ -613,7 +618,11 @@
         <!--Promotion Details View Controller-->
         <scene sceneID="ec5-5d-AsZ">
             <objects>
-                <viewController storyboardIdentifier="PromotionDetailsViewControllerId" id="tr4-Tq-w9T" customClass="PromotionDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController"/>
+                <viewController storyboardIdentifier="PromotionDetailsViewControllerId" id="tr4-Tq-w9T" customClass="PromotionDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="2Iu-6t-chL" kind="show" identifier="ShowSellerProfile" id="7dH-Jj-eDw"/>
+                    </connections>
+                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r3T-61-MaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1765" y="1263"/>
@@ -631,21 +640,14 @@
             </objects>
             <point key="canvasLocation" x="3003" y="-90"/>
         </scene>
-        <!--Seller Profile-->
-        <scene sceneID="Clr-D8-66g">
-            <objects>
-                <viewController id="8dF-Ru-GXn" customClass="SellerProfileViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Seller Profile" id="UmJ-LO-Lby"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="feL-Ea-Em3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2983" y="683"/>
-        </scene>
         <!--Post-->
         <scene sceneID="jbP-64-jST">
             <objects>
                 <viewController storyboardIdentifier="PostViewController" id="Mgd-dn-9Dr" customClass="PostViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Post" id="uLq-Z3-dHY"/>
+                    <connections>
+                        <segue destination="2Iu-6t-chL" kind="show" identifier="ShowUserProfile" id="gvg-eL-WZN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CyR-kB-3vV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -712,6 +714,75 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jGr-Ze-Vb7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-970" y="329"/>
+        </scene>
+        <!--People Navigation Controller Scene-->
+        <scene sceneID="lDO-V3-AH6">
+            <objects>
+                <navigationController storyboardIdentifier="PeopleNavigationController" id="xiK-gL-Br7" userLabel="People Navigation Controller Scene" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="hFM-cs-fYZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eAB-D2-ac0" kind="relationship" relationship="rootViewController" id="kBP-a0-EEU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B6x-qk-MSx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-902" y="-1436"/>
+        </scene>
+        <!--People View Controller-->
+        <scene sceneID="ENb-qf-IkM">
+            <objects>
+                <viewController storyboardIdentifier="PeopleViewController" id="eAB-D2-ac0" customClass="PeopleViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jp9-44-Yyc"/>
+                        <viewControllerLayoutGuide type="bottom" id="bap-jG-ifl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="00s-2i-lmJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="s1t-9I-Go6" customClass="TableView" customModule="PosInCore">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="s1t-9I-Go6" firstAttribute="top" secondItem="jp9-44-Yyc" secondAttribute="bottom" id="Dkq-yY-vo5"/>
+                            <constraint firstItem="bap-jG-ifl" firstAttribute="top" secondItem="s1t-9I-Go6" secondAttribute="bottom" id="Xtb-sb-qtJ"/>
+                            <constraint firstAttribute="trailing" secondItem="s1t-9I-Go6" secondAttribute="trailing" id="ZVa-zA-z1m"/>
+                            <constraint firstItem="s1t-9I-Go6" firstAttribute="leading" secondItem="00s-2i-lmJ" secondAttribute="leading" id="lCb-S2-sCq"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="AcL-Oe-2Nz">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="Pmf-n5-rnC">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Following"/>
+                                <segment title="Explore"/>
+                            </segments>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </segmentedControl>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="browseModeSegmentedControl" destination="Pmf-n5-rnC" id="NMe-Tk-IYK"/>
+                        <outlet property="tableView" destination="s1t-9I-Go6" id="vXD-og-qWn"/>
+                        <segue destination="2Iu-6t-chL" kind="show" identifier="ShowUserProfile" id="jVg-bh-JyA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wYO-PU-DPW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-226" y="-1436"/>
         </scene>
         <!--User Profile View Controller-->
         <scene sceneID="arf-ux-nM0">
@@ -919,5 +990,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="UGm-BP-OPQ"/>
+        <segue reference="jVg-bh-JyA"/>
     </inferredMetricsTieBreakers>
 </document>
